--- a/code/mbus-tcp-scan/mbus-tcp-scan.vcxproj
+++ b/code/mbus-tcp-scan/mbus-tcp-scan.vcxproj
@@ -127,12 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\mbus_tools\src\mbus-tcp-scan.c" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\libmbus\libmbus.vcxproj">
       <Project>{9aa6bd7f-3a72-4bd4-b2d0-7af7842498d6}</Project>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="mbus-tcp-scan.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
